test_scripts/errors/dict_pop_too_many_args.shm
let d = dict();
d["foo"] = 13;

d.pop("foo", "bar", "more");