test_scripts/errors/dict_pop_too_many_args.stderr
 2 | d["foo"] = 13;
 3 | 
 4 | d.pop("foo", "bar", "more");
      ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Got 4 arguments, but only used 3
